# neural-ai-next

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  INSTALL.md  INSTALLATION.md  QA_STATUS.md  README.md  coverage.xml  environment.yml  install_environment.py  main.py  mypy.ini  neural_ai.db  pyproject.toml  setup.py  teszt.py
.github/: copilot-instructions.md
.github/prompts/: .prompt.md
.github/workflows/: docs-check.yml
.roo/: 2025-12-23-custom.md  2025-12-23-fejlesztés több lépésben.md  ai_studio_code.txt  architect-export.yaml  ask-export.yaml  config.json  custom instructions for all.md  debug-export.yaml  fejlesztés prompt.md  instrukciók.md  közép.md  nagy-merged-új.md  nagy-merged.md  nagy.md  orchestrator-export.yaml  refaktor promptt.md  refaktor script mappa.md  ultra.md
.roo/prompts/: architect.md  ask.md  code.md  conventions.md  debug.md  main.md  orchestrator.md
.roo/rules/: rules.md  tesztnek.md
comments/: 10.comment.md  12.comment.md  13.comment.md  14.comment.md  15.comment.md  16.comment.md  17.comment.md  18.comment.md  2.comment.md  20.comment.md  22.comment(befejezetlen).md  23.comment.md  3.comment.md  4.comment.md  5.comment.md  6.comment.md  7.comment.md  8.comment.md  9.comment.md  custom-instructions.md  verziókezelés.md  ötletlista.md
configs/: collector_config.yaml  database.yaml  events.yaml  logging.yaml  storage.yaml  system.yaml
configs/collectors/: mt5.yaml
configs/collectors/mt5/: endpoints.yaml  instruments.yaml  settings.yaml
configs/logger/: logging.yaml
docs/: CHANGELOG.md  INSTALLATION_GUIDE.md  MQL5_COMPILATION_GUIDE.md  PROJECT_STATUS_REPORT.md  WINE_MT5_SETUP.md  ideas.md  storage.md
docs/architecture/: overview.md
docs/architecture/hierarchical_system/: overview.md
docs/components/: INSTALLATION.md  base.md  base_factory.md  container.md  core_components.md  interfaces.md  lazy_loading.md  main.md  singleton.md
docs/components/base/: CHANGELOG.md  README.md  api.md  architecture.md  development_checklist.md  examples.md  interfaces.md
docs/components/collectors/: README.md
docs/components/config/: CHANGELOG.md  CONTRIBUTING.md  README.md  api.md  api_reference.md  architecture.md  design_spec.md  development_checklist.md  examples.md  interfaces.md  technical_spec.md
docs/components/core/: bootstrap.md
docs/components/logger/: CHANGELOG.md  CONTRIBUTING.md  README.md  api.md  api_reference.md  architecture.md  design_spec.md  development_checklist.md  examples.md  technical_spec.md
docs/components/neural_ai/: __init__.md
docs/components/storage/: CHANGELOG.md  README.md  api.md  architecture.md  design_spec.md  development_checklist.md  examples.md
docs/components/tests/: full_test_run.md
docs/development/: DEVELOPMENT_STATUS.md  TASK_TREE.md  TASK_TREE_SCRIPTS.md  architecture_standards.md  checklist_template.md  code_review_guide.md  component_development_guide.md  core_dependencies.md  error_handling.md  implementation_guide.md  performance_optimization.md  unified_development_guide.md
docs/issues/: documentation_standardization.md  template_code_fixes.md  template_fixes.md
docs/models/hierarchical/: structure.md
docs/planning/specs/: 01_system_architecture.md  02_dynamic_configuration.md  03_observability_logging.md  04_data_warehouse.md  05_collectors_strategy.md
docs/processors/dimensions/: overview.md
docs/templates/: collector_template.py  component_template.py  config_template.py  interface_template.py  model_template.py  module_template.py  processor_template.py  storage_template.py  task_tree_template.md  test_template.py
docs2/components/base/: CHANGELOG.md  CONTRIBUTING.md  README.md  function_call_map.md
examples/: logger_usage.py
experts/: mt5_collector_ea.mq5
neural_ai/: __init__.py
neural_ai/collectors/: __init__.py
neural_ai/collectors/mt5/: __init__.py  collector.py  connection.py  data_validator.py  dlq.py  error_handler.py  exceptions.py  validator.py
neural_ai/core/: __init__.py
neural_ai/core/base/: __init__.py  container.py  core_components.py  exceptions.py  factory.py  interfaces.py  lazy_loading.py  singleton.py
neural_ai/core/config/: __init__.py  exceptions.py  factory.py
neural_ai/core/db/: __init__.py  factory.py  models.py  session.py
neural_ai/core/events/: __init__.py  bus.py  events.py  factory.py
neural_ai/core/logger/: __init__.py  exceptions.py  factory.py
neural_ai/core/storage/: __init__.py  exceptions.py  factory.py  parquet.py
neural_ai/core/system/: __init__.py  factory.py
neural_ai/core/utils/: __init__.py  factory.py  hardware.py
neural_ai/experts/mt5/: HISTORICAL_EXTENSION_IMPLEMENTATION.md  Neural_AI_Next.ex5  Neural_AI_Next.mq5  README.md  TESTING_GUIDE_HU.md
plans/: README_HU.md  adatgyujtesi_strategia_atfogo.md  base_komponens_dokumentacios_terv.md  base_komponens_fejlesztesi_javaslat.md  fejlesztoi_telepitesi_rendszer_terv.md  fejlesztoi_telepitesi_rendszer_terv_v2.md  implementacio_gyors_kezdes.md  mql5_ea_historikus_bovites_spec.md  mt5_ea_fastapi_development_plan.md  mt5_simplified_development_plan.md  rendszer_architektura_diagramok.md  telepitesi_rendszer_problemanalizis_es_javaslatok.md
scripts/: __init__.py  archive_project.py  check_docs_structure.py  check_installation.py  check_system_status.py  clean_all_data.sh  compile_mql.sh  create_data_warehouse_structure.py  deploy_ea.sh  fix_whitespace.py  install.py  live_system_check.py  load_jobs_to_db.py  log_viewer.py  run_collector.py  setup_mt5_dev.sh  setup_wine_mt5.sh  start_all_historical_collection.py  start_historical_collection.py  validate_docs_links.py
scripts/install/: README.md  __init__.py
scripts/install/docs/: BROKER_SETUP.md  INSTALLATION_GUIDE.md  TROUBLESHOOTING.md
scripts/install/scripts/: compile_mql.sh  (+4 more)
tests/: __init__.py  config.yml  test___init__.py  test_main.py
tests/core/: __init__.py  test___init__.py  test_core_init.py
tests/experts/: test_mt5_files.py
tests/integration/: mock_mt5.py  mt5_bridge.py  test_bootstrap.py  test_integration_zero.py
tests/scripts/: test_install.py
(+306 files in other folders)
