[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-ai-next"
version = "1.0.0"
description = "Hierarchical trading system with machine learning"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Elynea-1528", email = "szabogergely152800@gmail.com"}
]
keywords = ["trading", "machine-learning", "neural-networks", "metatrader", "forex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "vectorbt>=0.25.0",
    "fastparquet>=2023.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "packaging>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "bandit>=1.7.7",
    "ruff>=0.1.0",  # RUFF IS KING
    "pre-commit>=3.4.0",
    "types-pyyaml>=6.0.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
    "types-setuptools>=69.0.0",
    "types-pytz>=2023.3.0",
    "types-six>=1.16.0",
]

trader = [
    "dukascopy-python",
    "python-socketio>=5.0.0",
    "redis>=4.0.0",
]

jupyter = [
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "kaggle>=1.5.0",
    "tensorboard>=2.14.0",
]

full = [
    # Full dependency list (shortened for brevity, include all above)
]

[project.urls]
Homepage = "https://github.com/Elynea-1528/neural-ai-next"
Repository = "https://github.com/Elynea-1528/neural-ai-next"
Issues = "https://github.com/Elynea-1528/neural-ai-next/issues"

[tool.hatch.build.targets.wheel]
packages = ["neural_ai"]

# --- RUFF CONFIGURATION (Replaces Black, Isort, Flake8) ---
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (Docstrings)
]
ignore = [
    "D403", # First word of the first line should be properly capitalized (EZT KAPCSOLTUK KI!)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --- MYPY CONFIGURATION ---
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- PYTEST CONFIGURATION ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["neural_ai"]
omit = ["*/tests/*"]